[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kryptorious-qbio-coherence"
version = "0.3.5"
description = "Bio-Coherence Falsifier: a computational falsification engine for biological quantum-coherence claims, anchored to the Firmenich 2026 HEOM dephasing baseline."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Kryptorious Quantum Biosciences"}]
keywords = ["quantum-biology", "decoherence", "falsification", "microtubule", "coherence"]
dependencies = ["numpy>=1.21"]

[project.scripts]
qbio-falsify = "qbio_coherence.cli:main"

[project.urls]
Homepage = "https://github.com/CodeGero/qbio-coherence"

[tool.hatch.build.targets.wheel]
packages = ["qbio_coherence"]
